--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>The Hush Spot</title>
+   <meta name="description" content="Welcome to The Hush Spot Cafe – a cozy, quiet corner where coffee meets calm">
+    <meta name="keywords" content="The Hush Spot is a cozy and peaceful café tucked away in the heart of kathmandu, offering a serene escape from the everyday rush">
+    <meta name="author" content="The Hush Spot">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" content=" https://prabin-0cloud.github.io/switch/">
+    <meta property="og:title" content="The Hush Spot">
+    <meta property="og:discription" content="A quiet cafe escape where every cup is brewed with care and calm. Whether you're here to relax, read, or recharge, The Hush Spot offers the perfect blend of peace and flavor..">
+    <meta property="og:image" content="image/iim">
+    <meta property="og:url" content="https://prabin-0cloud.github.io/switch/ ">
+    <meta property="og:image" content="image/iim">
+    <meta property="twitter:title" content="The Hush Spot">
+    <meta property="twitter:discription" content="A quiet cafe escape where every cup is brewed with care and calm. Whether you're here to relax, read, or recharge, The Hush Spot offers the perfect blend of peace and flavor.
+.">
+    <meta property="twitter:url" content=" https://prabin-0cloud.github.io/switch/">
+    <meta property="twitter:image" content="image/iim">
     <title>HUSH CAFE</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|IBM+Plex+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
